--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,7 +34,7 @@
         border-radius: 4px;
       }
       button:hover {
-        background-color: #0056b3;
+        background-color: #044993;
       }
       #results {
         display: grid;
